syntax = "proto3";

option java_multiple_files = true;
package com.example.grpcdemo.grpc;

service Greeter {
	rpc Hello(GreeterRequest) returns (GreeterResponse) {}
}

message GreeterRequest {
	string name = 1;
}

message GreeterResponse {
	string greeting = 2;
}
